--- a/front_card/templates/base.html
+++ b/front_card/templates/base.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html>      
 <head>
-    <meta charset="utf-8" />
-    <title>{% block title %}Default title{% endblock title %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Клиника доктора Володьки</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <title>{% block title %}Стоматологическая клиника доктора Володьки{% endblock title %}</title>
+
+    <style>
+        .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
 </head>
 <body>
-    <div><a href="/">Главная</a> | <a href="/contacts">Контакты</a></div>
-    <h1>{% block header %}{% endblock header %}</h1>
-    <div>{% block content%}{% endblock content %}</div>
-    <div>MyCorp. 2022. All rights reserved.</div>
+    {% include "header.html"  %}
+
+    <main class="container">
+        {% block content%}{% endblock content %}
+    </main>
+
+    {% include "footer.html"  %}
+
 </body>
 </html>
