--- a/front_card/templates/header.html
+++ b/front_card/templates/header.html
@@ -6,9 +6,9 @@
       </a>
 
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white text-secondary" aria-current="page">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">О нас</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Врачи</a></li>
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-white text-secondary" aria-current="page">Главная</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-white">О нас</a></li>
+        <li class="nav-item"><a href="/contacts" class="nav-link px-2 text-white">Контакты</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Услуги</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Стоимость</a></li>
       </ul>
