--- a/front_card/templates/about.html
+++ b/front_card/templates/about.html
@@ -5,11 +5,12 @@
 
 <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
-      <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+      <h2 class="featurette-heading fw-normal lh-1">Что делает нас особенными?</h2>
+      <p class="lead">Прежде всего, мы стремимся к постоянному совершенствованию и соблюдению самых высоких стандартов качества. Наша клиника оснащена современным оборудованием, которое позволяет нам проводить точные диагностику и лечение с использованием передовых технологий. Мы постоянно следим за новыми тенденциями в стоматологии и внедряем инновационные методики, чтобы предоставить нашим пациентам самое современное лечение. </p>
+      <p class="lead">Наша дружелюбная и опытная команда стоматологов и медицинского персонала всегда готова помочь вам с любыми стоматологическими потребностями. Мы предлагаем широкий спектр услуг, включая профессиональную гигиену полости рта, лечение кариеса, эстетическую реставрацию, протезирование, ортодонтию и многое другое. Независимо от того, нужно ли вам основное лечение или сложные хирургические вмешательства, вы можете полностью положиться на нас.</p>
     </div>
     <div class="col-md-5">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="{% static 'images/pexels-bakytzhan-baurzhanov-9951395.jpg' %}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" type="image/svg+xml" width="500" height="500" />
     </div>
   </div>
 
@@ -17,11 +18,13 @@
 
 <div class="row featurette">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-      <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+      <h2 class="featurette-heading fw-normal lh-1">Забота и безопасность</span></h2>
+      <p class="lead">В нашей клинике мы понимаем, что поход к стоматологу может вызывать беспокойство и тревогу. Поэтому мы создали уютную и спокойную атмосферу, где вы сможете расслабиться и довериться нашей команде профессионалов. Наш персонал обладает не только высокой квалификацией, но и дружелюбным отношением, которое поможет вам почувствовать себя как дома.</p>
+      <p class="lead">В клинике мы придерживаемся высоких стандартов гигиены и безопасности, соблюдая все протоколы стерилизации и использования стерильных инструментов. Ваше здоровье и комфорт - наша главная забота.</p>
+      <p class="lead">Мы стремимся к постоянному совершенствованию и обеспечению наших пациентов наилучшими результатами. Наша цель - не просто обрабатывать зубы, а создавать красивые улыбки, которые будут дарить вам уверенность и радость на протяжении всей жизни.</p>
     </div>
     <div class="col-md-5 order-md-1">
-      <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+        <img src="{% static 'images/pexels-anna-morgan-12374352.jpg' %}" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" type="image/svg+xml" width="500" height="500" />
     </div>
   </div>
 
