--- a/front_card/templates/index.html
+++ b/front_card/templates/index.html
@@ -16,7 +16,7 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">Терапевтическая стоматология</h3>
-          <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
+          <p class="card-text mb-auto">В нашей клинике терапевтической стоматологии мы стремимся не только восстановить здоровье ваших зубов, но и создать истинное произведение искусства.</p>
           <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
             Перейти
             <svg class="bi"><use xlink:href="#chevron-right"/></svg>
@@ -31,8 +31,8 @@
     <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <h3 class="mb-0">Терапевтическая стоматология</h3>
-            <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
+            <h3 class="mb-0">Ортопедическая стоматология</h3>
+            <p class="card-text mb-auto">Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
             <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
               Перейти
               <svg class="bi"><use xlink:href="#chevron-right"/></svg>
@@ -49,7 +49,7 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Терапевтическая стоматология</h3>
+          <h3 class="mb-0">Хирургическая стоматология</h3>
           <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
           <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
             Перейти
@@ -65,7 +65,7 @@
     <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <h3 class="mb-0">Терапевтическая стоматология</h3>
+            <h3 class="mb-0">Имплантология</h3>
             <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
             <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
               Перейти
@@ -83,7 +83,7 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Терапевтическая стоматология</h3>
+          <h3 class="mb-0">Пародонтология</h3>
           <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
           <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
             Перейти
@@ -99,7 +99,7 @@
     <div class="col-md-6">
         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-4 d-flex flex-column position-static">
-            <h3 class="mb-0">Терапевтическая стоматология</h3>
+            <h3 class="mb-0">Ортодонтология</h3>
             <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
             <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
               Перейти
