--- a/front_card/templates/index.html
+++ b/front_card/templates/index.html
@@ -11,106 +11,28 @@
     </div>
 </div>
 
-<div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Терапевтическая стоматология</h3>
-          <p class="card-text mb-auto">В нашей клинике терапевтической стоматологии мы стремимся не только восстановить здоровье ваших зубов, но и создать истинное произведение искусства.</p>
-          <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-            Перейти
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-            <img src="{% static 'images/pexels-anna-shvets-3845729.jpg' %}" type="image/svg+xml" width="200" height="250" />    
-        </div>
-      </div>
+<div class="row align-items-md-stretch">
+  <div class="col-md-4">
+    <div class="h-100 p-5 text-bg-dark rounded-3">
+      <h2>Терапевтическая стоматология</h2>
+      <p>В нашей клинике терапевтической стоматологии мы стремимся не только восстановить здоровье ваших зубов, но и создать истинное произведение искусства.</p>
+      <button class="btn btn-outline-light" type="button">Перейти</button>
     </div>
-
-    <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <h3 class="mb-0">Ортопедическая стоматология</h3>
-            <p class="card-text mb-auto">Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Перейти
-              <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img src="{% static 'images/pexels-cedric-fauntleroy-4270079.jpg' %}" type="image/svg+xml" width="200" height="250" />
-          </div>
-        </div>
-      </div>
-</div>
-
-<div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Хирургическая стоматология</h3>
-          <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
-          <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-            Перейти
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-            <img src="{% static 'images/pexels-cottonbro-studio-6528908.jpg' %}" type="image/svg+xml" width="200" height="250" />
-        </div>
-      </div>
+  </div>
+  <div class="col-md-4">
+    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+      <h2>Ортопедическая стоматология</h2>
+      <p>Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
+      <button class="btn btn-outline-secondary" type="button">Узнать больше</button>
     </div>
-
-    <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <h3 class="mb-0">Имплантология</h3>
-            <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Перейти
-              <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img src="{% static 'images/pexels-cottonbro-studio-6529115.jpg' %}" type="image/svg+xml" width="200" height="250" />
-          </div>
-        </div>
-      </div>
-</div>
-
-<div class="row mb-2">
-    <div class="col-md-6">
-      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-        <div class="col p-4 d-flex flex-column position-static">
-          <h3 class="mb-0">Пародонтология</h3>
-          <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
-          <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-            Перейти
-            <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-          </a>
-        </div>
-        <div class="col-auto d-none d-lg-block">
-            <img src="{% static 'images/pexels-nadezhda-moryak-7800525.jpg' %}" type="image/svg+xml" width="200" height="250" />
-        </div>
-      </div>
+  </div>
+  <div class="col-md-4">
+    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+      <h2>Хирургическая стоматология</h2>
+      <p>Мы предлагаем широкий спектр услуг, включая изготовление коронок и мостов, протезирование зубов, установку имплантатов и ортодонтическую коррекцию.</p>
+      <button class="btn btn-outline-secondary" type="button">Посмотреть</button>
     </div>
-
-    <div class="col-md-6">
-        <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-          <div class="col p-4 d-flex flex-column position-static">
-            <h3 class="mb-0">Ортодонтология</h3>
-            <p class="card-text mb-auto">Большое и красивое описание указанной услуги</p>
-            <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
-              Перейти
-              <svg class="bi"><use xlink:href="#chevron-right"/></svg>
-            </a>
-          </div>
-          <div class="col-auto d-none d-lg-block">
-            <img src="{% static 'images/pexels-daniel-frank-287237.jpg' %}" type="image/svg+xml" width="200" height="250" />
-          </div>
-        </div>
-      </div>
+  </div>
 </div>
 
 {% endblock content %}
