--- a/front_card/templates/header.html
+++ b/front_card/templates/header.html
@@ -28,14 +28,15 @@
         <li class="nav-item"><a href="/patients" class="nav-link px-2 text-white">Пациентам</a></li>
         <li class="nav-item"><a href="/doctors" class="nav-link px-2 text-white">Врачи</a></li>
         <li class="nav-item"><a href="/cost" class="nav-link px-2 text-white">Стоимость</a></li>
-        <li class="nav-item">
+        <li class="nav-item"><a href="/appointment" class="nav-link px-2 text-white">Записаться на приём</a></li>
+        {% comment %} <li class="nav-item">
           <button 
           id="makeAnAppointmentButton"
           class="btn btn-outline-light" 
           style="margin-right:5px;" 
           data-toggle="modal" 
           data-target="#exampleModal"
-          type="button">Записаться на приём</button></li>
+          type="button">Записаться на приём</button></li> {% endcomment %}
       </ul>
     </header>
   </div>
